--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,11 +4,26 @@
     "version": "2.4.0",
     "description": "__MSG_extDescription__",
     "default_locale": "en",
-    "permissions": ["contextMenus", "tabs", "<all_urls>"],
-    "background": { "scripts": ["script.js"], "persistent": false },
-    "content_scripts": [
-        { "matches": ["<all_urls>"], "js": ["content.js"], "all_frames": true }
+    "permissions": [
+        "contextMenus",
+        "tabs",
+        "<all_urls>"
     ],
-    "icons": { "16": "icon16.png", "48": "icon48.png", "128": "icon128.png" }
+    "background": {
+        "scripts": [ "script.js" ],
+        "persistent": false
+    },
+    "content_scripts": [
+        {
+            "matches": [ "<all_urls>" ],
+            "js": [ "content.js" ],
+            "all_frames": true
+        }
+    ],
+    "icons": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+    }
 }
 
