--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,6 +17,7 @@
         {
             "matches": [ "<all_urls>" ],
             "js": [ "content.js" ],
+            "run_at": "document_start",
             "all_frames": true
         }
     ],
