--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,6 +23,7 @@
     ],
     "icons": {
         "16": "icon16.png",
+        "32": "icon32.png",
         "48": "icon48.png",
         "128": "icon128.png"
     }
