--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,5 +8,6 @@
   "typeAcquisition": {
     "include": ["chrome"]
   },
+  "include": ["src/**/*.js", "tests/**/*.js"],
   "exclude": ["node_modules"]
 }
