--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,29 +1,25 @@
 {
-    "manifest_version": 2,
-    "name": "__MSG_extName__",
-    "version": "2.10.2",
-    "description": "__MSG_extDescription__",
-    "default_locale": "en",
-    "permissions": [
-        "contextMenus",
-        "<all_urls>"
-    ],
-    "background": {
-        "scripts": [ "script.js" ],
-        "persistent": false
-    },
-    "content_scripts": [
-        {
-            "matches": [ "<all_urls>" ],
-            "js": [ "content.js" ],
-            "run_at": "document_start",
-            "all_frames": true
-        }
-    ],
-    "icons": {
-        "16": "icon16.png",
-        "32": "icon32.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
+  "manifest_version": 3,
+  "name": "__MSG_extName__",
+  "version": "3.0.0",
+  "description": "__MSG_extDescription__",
+  "default_locale": "en",
+  "permissions": ["contextMenus"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_start",
+      "all_frames": true
     }
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
