Fix issue template

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -33,13 +33,7 @@ body:
           required: true
   - type: markdown
     attributes:
-      value: >-
+      value: |
         - Reload pages
         - Restart browser
-        - (Firefox only) [Enable Permissions > Access your data for all
-        websites](https://github.com/foooomio/view-background-image/issues/39)
-  - type: markdown
-    attributes:
-      value: >-
-        This template was generated with [Issue Forms
-        Creator](https://issue-forms-creator.netlify.app)
+        - (Firefox only) [Enable Permissions > Access your data for all websites](https://github.com/foooomio/view-background-image/issues/39)
