Fix bug in Incognito mode

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,5 +21,6 @@
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "incognito": "split"
 }
