--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["http://*/*", "https://*/*", "file:///*/*"],
       "js": ["content.js"],
       "run_at": "document_start",
       "all_frames": true
